@@ -5,6 +5,7 @@ module Shoe
     autoload :Clean,     'shoe/tasks/clean'
     autoload :Compile,   'shoe/tasks/compile'
     autoload :Cucumber,  'shoe/tasks/cucumber'
+    autoload :Man,       'shoe/tasks/man'
     autoload :Rdoc,      'shoe/tasks/rdoc'
     autoload :Release,   'shoe/tasks/release'
     autoload :Test,      'shoe/tasks/test'
@@ -13,6 +14,7 @@ module Shoe
       Clean
       Compile
       Cucumber
+      Man
       Rdoc
       Release
       Test
